# footballsage

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  compose.dev.yaml  compose.yaml  example.env  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  docker.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/footballsage_api/: __init__.py  main.py  sage_advisor.py  worldcup_adapter.py
apps/api/tests/: test_players.py  test_sage_advisor.py
apps/web/: Dockerfile  package.json
apps/web/app/: layout.tsx  page.tsx  styles.css
apps/web/app/api/[...path]/: route.ts
apps/web/app/import-team/: page.tsx
apps/worldcup-api/: Dockerfile
apps/worldcup-api/overrides/src/cli/: sync-live.ts
apps/worldcup-api/overrides/src/jobs/live-score/: live-score.scheduler.ts  live-score.service.ts
apps/worldcup-db/: Dockerfile
data/fantasy-prices/: README.md  world-cup-2026-official.csv  world-cup-2026-official.meta.json
data/mappings/: README.md  fifa-to-worldcup-players.csv  manual-player-overrides.csv
data/tv2-prices/: world-cup-2026-tv2.csv  world-cup-2026-tv2.meta.json
docs/: DATA_SOURCES.md  DEPLOY.md  PLAN.md  RESUME_VM_MATCHES.md
scripts/: build_player_mapping.py  import_fifa_fantasy_prices.py  import_tv2_fantasy_prices.py
